--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -3,18 +3,18 @@ body {
 text-align: justify}
 </style>
 
-Higher body mass index (BMI) is a risk factor for thrombosis. Platelets are essential for haemostasis but contribute to thrombosis when activated pathologically. I aimed to assess the effect of BMI on platelet function and identify potential mechanisms which may mediate this effect by focusing on circulating plasma proteins. 
+Higher body mass index (BMI) is a risk factor for thrombosis. Mechanisms are unclear but it is likely that a change in platelet function (cells which are involved in clotting) mediate some of the risk. I aimed to assess the effect of BMI on platelet function and identify potential mechanisms which may mediate this effect by focusing on plasma proteins. 
 
-In **Chapter \@ref(BMI-platelets-INTERVAL)** I used data from INTERVAL, a UK study of blood donors to explore the effect of BMI on platelet traits measured by the Sysmex XN-1000 haematology analyser. Observational and Mendelian randomization (MR) analyses in up to 33,388 participants suggested higher BMI raises immature platelet count (IPC), a measure of newly produced platelets. A follow-up analysis using a pre-cardiac surgery cohort (COPTIC) indicated that IPC was positively associated with whole blood platelet aggregation induced by platelet agonists (N=655).
+I used data from INTERVAL, a UK study of blood donors to explore the effect of BMI on platelet traits measured by the Sysmex XN-1000 haematology analyser (**Chapter \@ref(BMI-platelets-INTERVAL)**). Observational and Mendelian randomization (MR) analyses in up to 33,388 participants suggested higher BMI raises immature platelet count (IPC), a measure of newly produced platelets. A follow-up analysis using a pre-cardiac surgery cohort (COPTIC) indicated that IPC was positively associated with whole blood platelet aggregation induced by platelet agonists (N=655).
 
-Following on from these findings, a pilot patient study was initiated to develop laboratory methods to explore the effect of BMI on platelet function and signalling. This is presented in **Chapter \@ref(BMI-platelets-clinic)**. Patients due to undergo bariatric surgery (BMI >40 kg/m^2^), alongside age and sex matched controls (BMI 18.5-25 kg/m^2^), donated blood samples (N=4). Platelet function experiments were carried out on blood samples, and a platelet proteome analysis was performed on isolated platelets using mass spectrometry. Established methods need to replicated in a larger sample size.
+Following on from these findings, a pilot patient study was initiated to develop laboratory methods to explore the effect of BMI on platelet function and signalling (**Chapter \@ref(BMI-platelets-clinic)**). Patients due to undergo bariatric surgery (BMI >40 kg/m^2^), alongside age and sex matched controls (BMI 18.5-25 kg/m^2^), donated blood samples (N=4). Platelet function experiments were carried out on blood samples, and a platelet proteome analysis was performed on isolated platelets using mass spectrometry. Established methods need to replicated in a larger sample size.
 
-Due to the chronic inflammatory effect of higher BMI, **Chapter \@ref(chemokine-platelets)** explored the effect of the chemokines macrophage-derived chemokine (MDC) and thymus and activation-regulated chemokine (TARC) on platelet function and signalling. MDC and TARC were able to potentiate platelet activation. Two sample MR provided causal estimates for the effect of higher circulating levels of MDC and TARC on disease. This analysis provided evidence that higher levels of MDC may contribute to venous thromboembolism.
+Given the known relationship between BMI and markers of chronic inflammation relevant to platelet function, I explored the effect of the chemokines macrophage-derived chemokine (MDC) and thymus and activation-regulated chemokine (TARC) on platelet function and signalling (**Chapter \@ref(chemokine-platelets)**). MDC and TARC were able to potentiate platelet activation. Two sample MR provided causal estimates for the effect of higher circulating levels of MDC and TARC on disease. This analysis provided evidence that higher levels of MDC may contribute to venous thromboembolism.
 
-As circulating proteins were shown to activate platelets, the effect of BMI on the overall circulating profile was explored in **Chapter \@ref(BMI-protein-MR)**. This analysis was conducted on INTERVAL participants with proteomics measured by SomaLogic (N=2737). Here, observational and MR analyses were implemented to obtain causal estimates. Higher BMI was linked to effects on levels of proteins involved in appetite regulation, inflammation and sex hormones. Proteins which were most affect by BMI were enriched for genes involved in cardiovascular disease.
+The effect of BMI on overall circulating protein profile was explored in efforts to determine the relevance for platelet function and related disease (**Chapter \@ref(BMI-protein-MR)**). This analysis was conducted on INTERVAL participants with proteomics measured by SomaLogic (N=2737). Here, observational and MR analyses were implemented to obtain causal estimates. Higher BMI was linked to effects on levels of proteins involved in appetite regulation, inflammation and sex hormones. Proteins which were most affect by BMI were enriched for genes involved in cardiovascular disease.
 
-A weight loss randomized control trial (RCT) called DiRECT was also implemented to evaluate the effect of BMI on the plasma proteome (N=146) in **Chapter \@ref(BMI-protein-RCT)**. Participants had their BMI and plasma proteome measured by SomaLogic at baseline and after one year of Type 2 Diabetes guideline care (control) or a total diet replacement (TDR) (intervention). Linear regression was used to explore effects as well as an instrumental variable analysis, using the treatment group as an instrument for BMI change. A reduction in BMI had a broad effect on the plasma proteome: proteomic changes were enriched for metabolic disease.
+A weight loss randomized control trial (RCT) called DiRECT was also implemented to evaluate the effect of BMI on the plasma proteome (N=146) (**Chapter \@ref(BMI-protein-RCT)**). Participants had their BMI and plasma proteome measured by SomaLogic at baseline and after one year of Type 2 Diabetes guideline care (control) or a total diet replacement (TDR) (intervention). Linear regression was used to explore effects as well as an instrumental variable analysis, using the treatment group as an instrument for BMI change. A reduction in BMI had a broad effect on the plasma proteome: proteomic changes were enriched for metabolic disease.
 
-The final results chapter **(Chapter \@ref(Comparison-proteome))** combined the results of the two previous chapters in attempt to identify consistent and divergent proteomic features across MR and weight loss RCT study designs. This chapter indicated that proteins which are altered with higher BMI can be reversed with a reduction in BMI through an intervention. There was evidence that BMI affects levels of proteins which may be indicative of a change in platelet function.
+Next the results of the two previous chapters were combined in attempt to identify consistent and divergent proteomic features across MR and weight loss RCT study designs (**Chapter \@ref(Comparison-proteome)**). This chapter indicated that proteins which are altered with higher BMI can be reversed with a reduction in BMI through an intervention. There was evidence that BMI affects levels of proteins which may be indicative of a change in platelet function.
 
 Finally, **Chapter \@ref(Discussion)** brings together the findings from the thesis and discusses how they relate back to the aims. The strengths and limitations of the work, the wider implications of the findings and future studies are also discussed. 
