--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -42,7 +42,7 @@ Risk factors have often been identified through observational associations. Obse
 
 (ref:scaption-MR-CVevent) Mendelian randomisation and randomised controlled trial example using body mass index and cardiovascular events
 
-(ref:caption-MR-CVevent) **Example of how Mendelian randomisation and a randomised controlled trial can be used to determine whether higher BMI increases the risk of cardiovascular events**. Figure made using BioRender.com.
+(ref:caption-MR-CVevent) **Example of how Mendelian randomisation and a randomised controlled trial can be used to determine whether higher BMI increases the risk of cardiovascular events**. Figure adapted from Bennett et al.[@Bennett2017]. Figure made using BioRender.com.
 
 ```{r MR-CVevent, echo = FALSE, fig.cap="(ref:caption-MR-CVevent)", fig.align = "center", fig.scap="(ref:scaption-MR-CVevent)"}
 include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = NA)
@@ -65,7 +65,7 @@ include_graphics(path = "figure/Intro_background/Thrombosis_venous_arterial.jpg"
 ```
 
 ## Higher BMI has a causal effect on ischaemic heart disease
-Studies which have used MR to estimate a causal effect have indicated that BMI may have an even greater effect on IHD than observational studies suggested. Nordestgaard et al. utilised single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate that 4kg/m^2^ higher BMI increases the odds of IHD by as much as 52%[@Nordestgaard2012]. Other studies which have used more specific measures of adiposity, such as waist hip ratio adjusted for BMI (WHRadjBMI), have also found evidence for a causal effect of adiposity on coronary heart disease risk[@Dale2017]. Further, higher BMI has been shown to have a causal relationship with more specific measures of cardiovascular events such as ischaemic stroke[@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE)[@Jimenez2021]. Despite evidence for causal relationships, changes which occur as a result of BMI which lead to these cardiovascular events are unclear.
+Studies which have used MR to estimate a causal effect have indicated that BMI may have an even greater effect on IHD than observational studies suggested. Nordestgaard et al. utilised single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate that 4kg/m^2^ higher BMI increases the odds of IHD by as much as 52%[@Nordestgaard2012]. Other studies which have used more specific measures of adiposity, such as waist hip ratio adjusted for BMI (WHRadjBMI), have also found evidence for a causal effect of adiposity on coronary heart disease risk[@Dale2017]. Further, higher BMI has been shown to have a causal relationship with more specific measures of cardiovascular events such as ischaemic stroke[@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE)[@Jimenez2021]. A meta-analysis of bariatric surgery on cardiovascular outcomes also found that bariatric surgery reduces myocardial infarction and stroke compared with non-surgical controls[@vanVeldhuisen2022]. Despite evidence for causal relationships, changes which occur as a result of BMI which lead to these cardiovascular events are unclear.
 
 ## How does higher BMI cause increased risk of CHD?
 There is extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL)[@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD[@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors which circulate that are mediating this association. There are thousands of detectable proteins which circulate in the blood[@Sun2018], which have a range of roles from inflammation to coagulation. It is likely that adiposity causes an alteration in such proteins, which may have a downstream effect on platelet function and cardiovascular risk. Assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease and identify druggable targets.
