--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -79,7 +79,9 @@ Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibod
 Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer. Diluted blood was incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-CD45 antibodies at room temperature for 15 mins (antibodies used 1:10 v/v). Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle) for the same 15 minute duration. Samples were fixed with FixLyse for 10 minutes, followed by a final concentration of 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
 
 ### Tandem Mass Tag Mass Spectrometry (TMT-MS) quantification of platelet proteins
-TMT-MS was performed by the Proteomics facility at the University of Bristol. Platelet lysate samples (50 ug total protein) were digested with trypsin, then labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled to create a reference then they were evaporated to dryness. Samples were resuspended in formic acid (5%). The pooled sample was then desalted. This was done using a SepPak cartridge (Waters, Milford, Massachussetts, USA). The solution from the SepPak cartridge was evaporated to dryness. Following this step and before fractionation the eluate was resuspended using high pH reversed-phase chromatography. The system used was the Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ultimate 3000 nano-LC system with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific). Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
+TMT-MS was performed by the Proteomics facility at the University of Bristol. An overview of the process is provided below. Platelet lysate samples (50 ug total protein) were digested with trypsin and labeled with TMT 15 plex reagents. A range of steps including pooling, evaporating to dryness, desalting, and fractionation were used. Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
+
+These steps were followed by pooling and evaporating to dryness. Samples were resuspended in formic acid (5%), desalted with a SepPak cartridge and evaporated to dryness. Following this step and before fractionation the eluate was resuspended using high pH reversed-phase chromatography. The system used was the Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ultimate 3000 nano-LC system with an Orbitrap Fusion Tribrid Mass Spectrometer. 
 
 ### Statistical analysis for platelet function assays
 Data was analysed using GraphPad Prism 8. All data points are presented where possible to be fully transparent. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. P-values for results are presented throughout, however these were not dichotomised as either 'significant' or 'not significant'[@Sterne2001] as the current study has low power and the groups are unlikely to be fully representative of the respective populations. A P-value threshold of 0.05 may therefore not be appropriate in this case.  
