--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -32,16 +32,12 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Pathways linking plasma proteins and platelet function: do the chemokines MDC and TARC play a role? {#chemokine-platelets}
 
 ## Background
-	
-Platelets play an important role in haemostasis[@Rivera2009]. In healthy people, prostacyclin (PGI2) and nitric oxide (NO) are released by the endothelium to suppress platelet activity[@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V receptor and the GPVI collagen receptor. As a result, platelets secrete α- and dense-granules and undergo shape change[@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines[@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y~1~ and P2Y~12~ platelet receptors. Platelet activation also results in activation of integrins such as α~IIb~β~3~ and subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding[@Rivera2009]. Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
 
-Platelets likely contribute to the increased CVD risk related to obesity and type II diabetes. Platelets from patients with obesity are reported to be hyperactive and have a lower sensitivity to antiplatelet therapies such as clopidogrel[@Nardin2015]. These therapies are critical in the prevention of ischaemic events in certain circumstances. The underlying mechanism that causes platelet hyperactivity is not completely understood. It is likely to involve a combination of factors. One such factor is a decrease in the production of endothelial PGI2 and nitrous oxide[@BelindeChantemele2012a]. Another contributing factor could be an alteration in the circulating levels of soluble ligands, growth factors and cytokines as a result of low grade chronic inflammation[@Esser2014]. These proteins may subsequently enhance platelet function (known as platelet priming). Platelet primers are signaling molecules which enhance agonist-induced platelet function but in isolation are unable to activate platelets. Molecules that have been reported to be able to prime platelets include insulin-like growth factor-1 (IGF-1)[@Nardin2015; @Blair2015] and thrombopoietin (TPO)[@Maury2010a].
+Platelets likely contribute to the increased CVD risk related to obesity. The previous chapters have indicated that higher BMI may contribute to raising IPC and may affect the platelet proteome. This may have implications for platelet function. Other published work has demonstrated that platelets from patients with obesity are hyperactive and have a lower sensitivity to antiplatelet therapies such as clopidogrel[@Nardin2015]. These therapies are critical in the prevention of ischaemic events in certain circumstances. The underlying mechanisms that cause general platelet hyperactivity in obesity is not completely understood. It is likely to involve a combination of factors. One such factor could be a decrease in the production of endothelial PGI2 and nitrous oxide[@BelindeChantemele2012a]. Another contributing factor could be an alteration in the circulating levels of soluble ligands, growth factors and cytokines as a result of low grade chronic inflammation[@Esser2014]. These proteins may subsequently enhance platelet function (known as platelet priming). Platelet primers are signaling molecules which enhance agonist-induced platelet function but in isolation are unable to activate platelets. Molecules that have been reported to be able to prime platelets include insulin-like growth factor-1 (IGF-1)[@Nardin2015; @Blair2015] and thrombopoietin (TPO)[@Maury2010a].
 
-There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation[@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17)[@Safa2016]. These inflammatory chemokines act at the receptor CCR4, which is expressed on platelets[@Clemetson2000]. MDC and TARC have been shown to potentiate platelet aggregation[@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of the platelet agonist ADP[@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI), therefore implicating MDC in thrombosis pathophysiology[@Noori2018]. Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K)[@Blair2015; @Pasquet2000; @Falcinelli2005].  Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that MDC and TARC could also exert priming effects through these common pathways. 
+There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation[@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17)[@Safa2016]. These inflammatory chemokines act at the receptor CCR4, which is expressed on platelets[@Clemetson2000]. MDC and TARC have been shown to potentiate platelet aggregation[@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of the platelet agonist ADP[@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI), therefore implicating MDC in thrombosis pathophysiology[@Noori2018]. Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K)[@Blair2015; @Pasquet2000; @Falcinelli2005]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that MDC and TARC could also exert priming effects through these common pathways. 
 
-As blood/plasma levels of MDC have been reported to be elevated in obese people[@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may provide important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events. The aims of this chapter were therefore to determine the effects and mechanisms of MDC and TARC on platelet function and signalling and explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation.
-
-Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overal thesis hypthoses which are addressed in the current chapter.
+As blood/plasma levels of MDC have been reported to be elevated in people with obesity[@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may provide important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events. Furthermore, If MDC and TARC are able to mediate the effect of obesity on platelet function, this may suggest that exploring the effect BMI on the general plasma proteome is required in order to identify other potential protein mediators. The aims of this chapter were therefore to determine the effects and mechanisms of MDC and TARC on platelet function and signalling and explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation. Investigation of the effect of BMI on levels of MDC and TARC will be explored in Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT). Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overall thesis hypotheses which are addressed in the current chapter.
 
 (ref:caption-chemokine-platelet-graphic) **Schematic of the associations explored in Chapter \@ref(chemokine-platelets)**. This chapter explores the effect of the chemokines MDC and TARC on platelet function and aims to explore their involvement in disease. Figure made using BioRender.com.
 (ref:scaption-chemokine-platelet-graphic) Schematic of the associations explored in Chapter \@ref(chemokine-platelets)
