--- a/index/10-appendix.Rmd
+++ b/index/10-appendix.Rmd
@@ -48,8 +48,8 @@ include_graphics(path = "figure/Appendix/leptin_nonlinear_obs.pdf", dpi = NA)
 ## Determining non-linear effects using TSLS MR methods
 Non-linearity can be easily implemented using observational methods. However due to the nature of MR, regressing the genetic risk score on BMI provided estimates of genetically predicted BMI (the first stage of the TSLS analysis). The protein was then regressed on this genetically predicted BMI (second stage of TSLS) using a non-linear function, however, this covered a limited range of BMI as seen in Figure \@ref(fig:leptin-lm-GAM-MR). Therefore it was more difficult to interpret a causal non-linear effect over the full range of BMI observed in the population.
 
-(ref:leptin-lm-GAM-MR-cap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomization. Linear model (blue) and generalized additive model (red) of the association between BMI and leptin with 95% confidence intervals. The vertical lines indicate the mean BMI for each BMI category (underweight, healthy, all, overweight, obese)
-(ref:leptin-lm-GAM-MR-scap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomization
+(ref:leptin-lm-GAM-MR-cap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomisation. Linear model (blue) and generalized additive model (red) of the association between BMI and leptin with 95% confidence intervals. The vertical lines indicate the mean BMI for each BMI category (underweight, healthy, all, overweight, obese)
+(ref:leptin-lm-GAM-MR-scap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomisation
 ```{r leptin-lm-GAM-MR, echo = FALSE, warning=FALSE, message=FALSE, out.width="80%", fig.cap='(ref:leptin-lm-GAM-MR-cap)', fig.align = "center", fig.scap='(ref:leptin-lm-GAM-MR-scap)'}
 include_graphics(path = "figure/Appendix/leptin_nonlinear_MR.pdf", dpi = NA)
 ```
@@ -64,10 +64,10 @@ include_graphics(path = "figure/Appendix/leptin_nlmr_fracpoly_piecewise.pdf", dp
 ```
 
 ## GAM and linear stratified MR (GLSMR)
-The issue with these methods is that it isn't possible to estimate the effect of a certain range of BMI on protein levels. This is important to be able to understand the range of BMI where certain effects on proteins are likely to occur. Therefore the package "glsmr" was created within the group by David Hughes. This package enables estimates to be derived for the effect of the exposure on the outcome for specified ranges in the exposure, using both observational associations and using Mendelian randomization. It also compares the linear and non-linear models. More details can be found here https://github.com/hughesevoanth/glsmr. The effects of BMI on leptin levels were further explored using this package. For this analysis the strata were defined as 18.5-25 kg/m^2^ (healthy), 25-30kg/m^2^ (overweight) and 30-40kg/m^2^ (obesity). Similar to Figures \@ref(fig:leptin-lm-GAM) and \@ref(fig:leptin-lm-GAM-MR), Figures \@ref(fig:leptin-glsmr)A and B indicate the observational and MR linear and non-linear GAMs with the comparison in model fit indicated by the p-values. Here, the non-linear GAM is a better fit than the linear model (p=5.4x10^-43^), but this was not the case for the MR analysis (p=0.07). Figure \@ref(fig:leptin-glsmr)C indicates how as the BMI category increases, the magnitude of the estimate became smaller, where the estimate was halved when comparing the obesity group (estimate=0.11 SD per kg/m^2^ higher BMI, 95% CI 0.09 to 0.13, p=1.5510^-21^) with the healthy BMI group (estimate = 0.23 SDs per kg/m^2^ higher BMI, 95 % CI 0.20 to 0.26, p=2.110^-59^). The point estimate also attenuated when comparing the obesity group with the healthy BMI group in the MR (Figure \@ref(fig:leptin-glsmr)D).
+The issue with these methods is that it isn't possible to estimate the effect of a certain range of BMI on protein levels. This is important to be able to understand the range of BMI where certain effects on proteins are likely to occur. Therefore the package "glsmr" was created within the group by David Hughes. This package enables estimates to be derived for the effect of the exposure on the outcome for specified ranges in the exposure, using both observational associations and using Mendelian randomisation. It also compares the linear and non-linear models. More details can be found here https://github.com/hughesevoanth/glsmr. The effects of BMI on leptin levels were further explored using this package. For this analysis the strata were defined as 18.5-25 kg/m^2^ (healthy), 25-30kg/m^2^ (overweight) and 30-40kg/m^2^ (obesity). Similar to Figures \@ref(fig:leptin-lm-GAM) and \@ref(fig:leptin-lm-GAM-MR), Figures \@ref(fig:leptin-glsmr)A and B indicate the observational and MR linear and non-linear GAMs with the comparison in model fit indicated by the p-values. Here, the non-linear GAM is a better fit than the linear model (p=5.4x10^-43^), but this was not the case for the MR analysis (p=0.07). Figure \@ref(fig:leptin-glsmr)C indicates how as the BMI category increases, the magnitude of the estimate became smaller, where the estimate was halved when comparing the obesity group (estimate=0.11 SD per kg/m^2^ higher BMI, 95% CI 0.09 to 0.13, p=1.5510^-21^) with the healthy BMI group (estimate = 0.23 SDs per kg/m^2^ higher BMI, 95 % CI 0.20 to 0.26, p=2.110^-59^). The point estimate also attenuated when comparing the obesity group with the healthy BMI group in the MR (Figure \@ref(fig:leptin-glsmr)D).
 
-(ref:leptin-glsmr-cap) **Observational and Mendelian randomization estimates for the effect of BMI (kg/m^2^) on leptin (SDs) stratified by BMI category.** Shaded areas display the ranges of BMI of each stratum: 18.5-25 (red), 25-30 (blue), 30-40 (green) A) Comparison between the fit of the non-linear and linear generalized additive models (GAMs) with age and sex as covariables.  B) Comparison between the fit of the non-linear and linear generalized additive models (GAMs) with age and sex as covariables for the two stage least squares Mendelian randomization (MR) analysis. C) Stratified estimates for the observational association between BMI and leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). D) Stratified estimates for the MR estimates for the effect of BMI on leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). Black indicates the estimate has a p value of >0.05 and red indicates p<0.05. Strata estimates are presented as circles with the estimate for the complete dataset represented by a square.
-(ref:leptin-glsmr-scap) Observational and Mendelian randomization estimates for the effect of BMI on leptin stratified by BMI category.
+(ref:leptin-glsmr-cap) **Observational and Mendelian randomisation estimates for the effect of BMI (kg/m^2^) on leptin (SDs) stratified by BMI category.** Shaded areas display the ranges of BMI of each stratum: 18.5-25 (red), 25-30 (blue), 30-40 (green) A) Comparison between the fit of the non-linear and linear generalized additive models (GAMs) with age and sex as covariables.  B) Comparison between the fit of the non-linear and linear generalized additive models (GAMs) with age and sex as covariables for the two stage least squares Mendelian randomisation (MR) analysis. C) Stratified estimates for the observational association between BMI and leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). D) Stratified estimates for the MR estimates for the effect of BMI on leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). Black indicates the estimate has a p value of >0.05 and red indicates p<0.05. Strata estimates are presented as circles with the estimate for the complete dataset represented by a square.
+(ref:leptin-glsmr-scap) Observational and Mendelian randomisation estimates for the effect of BMI on leptin stratified by BMI category.
 ```{r leptin-glsmr, echo = FALSE, warning=FALSE, message=FALSE, out.width="90%", fig.cap='(ref:leptin-glsmr-cap)', fig.align = "center", fig.scap='(ref:leptin-glsmr-scap)'}
 include_graphics(path = "figure/Appendix/glsmr_plot_leptin.pdf", dpi = NA)
 ```
