--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -60,12 +60,12 @@ As well as IPC having the potential to be a useful biomarker, the targeted appro
 The BMI and proteome analyses suggested that various plasma proteins could also be biomarkers in patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al. (unpublished), analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC. Other proteins such as SHBG have been implicated in T2D. Proteins such as INHBC and SHBG could therefore be therapeutic targets. Proteins which are altered with weight loss on the plasma proteome also indicates potential proteins which may be have a role in reducing the disease risk associated with weight loss. The comparison across both studies indicates proteins which are altered with BMI in both study designs and therefore may be the most suitable targets for pharmacological intervention.
 
 ## Possible mechanisms of effects
-It is unclear how these associations fit together and whether they are truly part of the same pathway. My hypothesis is that higher BMI alters the circulating composition of proteins. This global change in protein composition exerts effects on other blood cells in the local environment such as platelets. Megakaryocytes which are situated in the bone marrow may respond to this change in protein environment, where there is an increase in proliferation into platelets, therefore raising levels of IPC. A simultaneous reduction in proteins such as PAFAH and IGFBP1, along with increases in other proteins such as Complement C5 would likely lead to greater platelet activation and contribute to the progression of CVD. It is important to note that causality was not explored between protein levels and IPC, therefore it is possible that a change in IPC could lie before protein changes within the pathway. However, the ability of proteins such as the chemokines MDC and TARC to activate platelets, as demonstrated in this thesis, highlights that it may be more likely the protein change is upstream of platelet alterations. A common theme among proteins altered with BMI is that they are proteins which have a key role in regulating the levels of another protein. This is the case for SHBG, IGFBPs, PAI-1 and PAFAH. These proteins collectively have been shown to be able to regulate platelet function. It may be that proteins involved in regulating other proteins are more dynamic in their levels in response to obesity or in response to weight loss, but this requires formal exploration.
+It is unclear how these associations fit together and whether they are truly part of the same pathway. My hypothesis is that higher BMI alters the circulating composition of proteins. This global change in protein composition exerts effects on other blood cells in the local environment such as platelets. Megakaryocytes which are situated in the bone marrow may respond to this change in protein environment, where there is an increase in proliferation into platelets, therefore raising levels of IPC. A simultaneous reduction in proteins such as PAFAH and IGFBP1, along with increases in other proteins such as Complement C5 would likely lead to greater platelet activation and contribute to the progression of CVD. It is important to note that causality was not explored between protein levels and IPC, therefore it is possible that a change in IPC could lie before protein changes within the pathway. However, the ability of proteins such as the chemokines MDC and TARC to activate platelets, as demonstrated in this thesis, highlights that it may be more likely the protein change is upstream of platelet alterations. A common theme among proteins altered with BMI is that they are proteins which have a key role in regulating the levels of other biologically active proteins. This is the case for SHBG, IGFBPs, PAI-1 and PAFAH, where SHBG binds to androgens and oestrogens, IGFBPs bind to IGFs, PAI-1 inhibits tPA and PAFAH inactivates PAF. These proteins collectively have been shown to be able to regulate platelet function. It may be that proteins involved in regulating other proteins are more dynamic in their levels in response to obesity or in response to weight loss, but this requires formal exploration.
 
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. Orthogonal evidence is when findings are replicated more than one study design. This thesis has provided orthogonal evidence such as through use of MR along with a weight loss RCT to determine effects of BMI on the plasma proteome. This is therefore a major strength of the current research. Using a combination of study designs is crucial to determine causal effects as each technique has its own set of strengths and limitations.
 
-One of the major benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement). Mouse models could have been used to explore the effect of obesity on platelet characteristics and platelet function. However, instead of this, a human patient study was designed and platelet data was obtained from both a healthy cohort as well as a cohort with a history of cardiovascular disease. Obtaining blood from humans over mice is preferable as 1) they are able to consent, 2) obtaining large blood volumes for experiments is not lethal and 3) mice have less genetic overlap with humans therefore findings may not always directly relate to humans.
+One of the major benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement). Mouse models could have been used to explore the effect of obesity on platelet characteristics and platelet function. However, instead of this, a human patient study was designed and platelet data was obtained from both a healthy cohort as well as a cohort with a history of cardiovascular disease. Obtaining blood from humans over mice is preferable as 1) they are able to consent, 2) obtaining large blood volumes for experiments is not lethal and 3) mice have less genetic overlap with humans therefore findings may not always directly translate to humans.
 
 ## Limitations
 The limitations in this section are ordered by results chapter.
@@ -83,7 +83,7 @@ The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided MR evidence for a causa
 
 Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other larger bariatric cohorts such as the Stratification of Obese PHenotypes to optimize future obesity therapy (SOPHIA) study which would likely have the relevant full blood count data to perform these analyses. Although this study may help in overcoming power issues that arise with a small sample size, the SOPHIA cohort would also include many participants who have had a previous COVID-19 infection, therefore there still may be an issue with confounding: as severe COVID-19 is more common in people with a high BMI and it can present with a more severe thrombotic phenotype in those with a higher BMI, this could make an association between BMI group and platelet function appear when there may not be a true association. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomisation could be performed to identify how this could affect cardiovascular outcomes. However, this would be labour intensive.
 
-Analyses explored both the platelet proteome and the plasma proteome in relation to body mass index. The effect of obesity on microparticles released from platelets activated by thrombin has also been explored[@Grande2019]. A systematic comparison across these three proteomes could reveal how these proteomes relate to each other. For example, it could be possible to see whether specific proteins are affected in the same way in both platelets and plasma, or if there is a reciprocal relationship. Initial analyses on platelet proteomic data from patients with COVID-19 have identified that many plasma COVID-19 biomarkers are also altered in platelets (unpublished data from the Hers group). This may also be the case for other diseases such as MI/DVT and therefore requires further exploration. 
+Analyses explored both the platelet proteome and the plasma proteome in relation to body mass index. The effect of obesity on microparticles released from platelets activated by thrombin has also been explored[@Grande2019]. A systematic comparison across these three proteomes could reveal how these proteomes relate to each other. For example, it could be possible to see whether specific proteins are affected in the same way in both platelets and plasma, or if there is a reciprocal relationship. Initial analyses on platelet proteomic data from patients with COVID-19 have identified that many plasma COVID-19 biomarkers which are raised in COVID-19 are also raised in platelets (unpublished data from the Hers group). This may also be the case for other diseases such as MI/DVT and therefore requires further exploration.
 
 The MR analysis in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. There was also MR evidence that higher BMI raises IPC. Exploring the possibility of a bidirectional effect for both of these analysis would be important as it cannot be ruled out that certain proteins could be involved in processes involved in weight regulation, such as with PAFAH. It is unlikely that IPC would have a causal effect on BMI, however this would also need to be confirmed by use of a two sample MR. The possible effect of plasma proteins on IPC could also be explored using a two sample MR, using summary statistics for their respective GWAS. Another way to address the effects of proteins on IPC and platelet function could be to apply proteins such as fumarylacetoacetase, SHBG and leptin to megakaryocytes and to see whether there are changes in production of platelets compared to control. Proteins could also be applied in platelet aggregation experiments or _in vitro_ thrombosis to see whether these cause platelet hyperactivity.
 
